⬆️ Update development tool versions in mise.toml
Updates Ruby from 3.4.3 to 3.4.4, Bun from 1.2.13 to 1.2.17, and
pins Node.js to specific version 22.17.0 instead of using 'lts'. This
ensures all developers use consistent tool versions and includes latest
security patches and bug fixes.

--- a/mise.toml
+++ b/mise.toml
@@ -7,9 +7,9 @@ idiomatic_version_file = false
 asdf_compat = false
 
 [tools]
-ruby = { version = '3.4.3' }
-bun = { version = '1.2.13' }
-node = { version = 'lts' }
+ruby = { version = '3.4.4' }
+bun = { version = '1.2.17' }
+node = { version = '22.17.0' }
 
 [tasks]
 'db:reset' = { run = [
